# DiriginteSmart

./: Dockerfile  app.py  app.py.add_reminders_routes  app.py.bak  main.py  models.py  pyproject.toml  requirements.txt
.config/.semgrep/: settings.yml
attached_assets/: Pasted-Iat-o-propunere-simpl-pas-cu-pas-i-c-teva-idei-Conceptul-de-Baz-Varianta-Simpl-Script-Py-1747050256020.txt  Pasted-Problema-real-Replit-blocheaz-conexiunile-SMTP-port-465-587-ncep-nd-cu-2023-2024-Replit-a-res-1747138059565.txt
sample_data/: note.csv
static/: notifications.html
static/css/: custom.css
static/js/: app.js
templates/: add_grades.html  add_multiple_grades.html  base.html  edit_grade.html  edit_reminder.html  edit_student.html  email_settings.html  gdpr_consent.html  gdpr_delete.html  gdpr_export.html  gdpr_parent_consent_form.html  index.html  manage_students.html  manage_subjects.html  reminder_badge.html  reminders.html  results.html  send_notifications.html  student_profile.html  view_grades.html
utils/: csv_processor.py  email_sender.py  gdpr_utils.py  pdf_generator.py  simple_notifier.py  webhook_sender.py
