[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-migrate>=4.1.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "mailjet-rest>=1.4.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sendgrid>=6.12.0",
    "sqlalchemy>=2.0.40",
    "twilio>=9.6.0",
    "werkzeug>=3.1.3",
    "xlsxwriter>=3.2.3",
    "pdfkit>=1.0.0",
    "weasyprint>=65.1",
    "sib-api-v3-sdk>=7.6.0",
    "slack-sdk>=3.35.0",
]
